# CosmosIQ

./: .env.example  .gitignore  ARCHITECTURE_DECISIONS.md  CLAUDE.md  Dockerfile  Makefile  PROJECT_CONTEXT.md  README.md  conftest.py  docker-compose.yml  pyproject.toml
architecture/: AGENT_COVERAGE_MATRIX_012.md  AGENT_MAP_012.md  ARB-012_Adversarial_Validation.md  ARB-012_Intelligence_Discipline_Architecture.md  ARB-012_Investigation_Report.md  ARCHITECTURE_BACKLOG.md  ARCHITECTURE_CONTRACT_011.md  ARCHITECTURE_CONTRACT_012.md  ARCHITECTURE_DECISIONS.md  DATA-SOURCE-001_ingestion-source-plan.md  DATA_QUALITY_GATE_CONTRACT_013.md  EIOS-011-014_Comparative_Structural_Analysis.md  EIOS_Architecture_Book.docx  EIOS_Architecture_Book.md  GATE-011_BUILD_ACCEPTANCE_CHECKLIST.md  HANDOFF_CONTRACT_012.md  IMPLEMENTATION_PLAN_011.md  IMPLEMENTATION_PLAN_012.md  IMPLEMENTATION_PLAN_013.md  OBSERVABILITY_CONTRACT_013.md  PART_III_CANONICAL_CURRENCIES.md  PART_III_DESIGN_BRIEF.md  PART_III_INTELLIGENCE_ASSESSMENT.md  PART_IV_OPPORTUNITY_GENERATION.md  PART_VIII_UI_INFINITE_CANVAS.md  PART_VII_EXECUTION.md  PART_VI_PERSONAL_CIO.md  PART_V_CAPITAL_ALLOCATION.md  PERSISTENCE_REPLAY_CONTRACT_013.md  RUNTIME_CONTRACT_013.md  SECURITY_POLICY_CONTRACT_013.md  SOURCE_ADAPTER_PRODUCTION_CONTRACT_013.md  SPEC-011_END_TO_END_DILIGENCE_RESEARCH_MVP.md  SPEC-012_REAL_TIME_REALITY_INTELLIGENCE_SENSOR_MESH.md  SPEC-013_AGENT_RUNTIME_PRODUCTION_READINESS.md  TEST_MATRIX_011.md  TEST_MATRIX_012.md  TEST_MATRIX_013.md
config/: shadow_launch_020g.yaml
deploy/: README.md
docs/: DEPLOYMENT_019.md  (+19 more)
(+518 files in other folders)
